# PInvokeTest

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  native-win.bat
cmake/: FindEigen3.cmake
src/: CMakeLists.txt  Directory.Build.props  PInvokeTest.Core.sln  PInvokeTest.Win.sln  PInvokeTest.sln
src/App/: App.csproj  Program.cs
src/FullApp/: FullApp.csproj  Program.cs
src/FullApp/Properties/: AssemblyInfo.cs
src/ManagedModel/: Bisection.cs  CoefficientMatrix.cs  ManagedModel.csproj  Model.cs
src/ManagedModel.UnitTests/: BisectionTest.cs  CoefficientMatrixTest.cs  ColumnMatrixTest.cs  ManagedModel.UnitTests.csproj  ModelTest.cs  SystemOfLinearEquationsSolverTest.cs
src/ManagedModel.UnitTests/Sle/: CoefficientMatrixTest.cs  ColumnMatrixTest.cs  SystemOfLinearEquationsSolverTest.cs
src/ManagedModel/Sle/: CoefficientMatrix.cs  ColumnMatrix.cs  InvalidMatrixOperationException.cs  Solution.cs  SolveResult.cs  SystemOfLinearEquationsSolver.cs
src/ManagedModel/Sle/Details/: MatrixDllImport.cs  MatrixDllImport32.cs  MatrixDllImport64.cs  SolverDllImport.cs  SolverDllImport32.cs  SolverDllImport64.cs
src/NativeModel/: Bisection.cpp  Bisection.hpp  CMakeLists.txt  Model.cpp  SystemOfLinearEquations.cpp  SystemOfLinearEquations.hpp
src/NativeModel32/: NativeModel32.vcxproj  NativeModel32.vcxproj.filters  packages.config
src/NativeModel64/: NativeModel64.vcxproj  NativeModel64.vcxproj.filters
